// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink\` renders 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bxivhb bePzqf"
    data-testid="button"
  />
</DocumentFragment>
`;

exports[`ButtonOutline\` renders 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-htpNat thfpy"
    data-testid="button"
  />
</DocumentFragment>
`;

exports[`prop \`label\` renders with label="Ok 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bwzfXH gWaywk"
    data-testid="button"
  >
    Ok
  </button>
</DocumentFragment>
`;

exports[`prop \`label\` renders with label="Submit 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bwzfXH gWaywk"
    data-testid="button"
  >
    Submit
  </button>
</DocumentFragment>
`;

exports[`prop \`type\` renders with type="button" 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bwzfXH gWaywk"
    data-testid="button"
    type="button"
  />
</DocumentFragment>
`;

exports[`prop \`type\` renders with type="reset" 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bwzfXH gWaywk"
    data-testid="button"
    type="reset"
  />
</DocumentFragment>
`;

exports[`prop \`type\` renders with type="submit" 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bwzfXH gWaywk"
    data-testid="button"
    type="submit"
  />
</DocumentFragment>
`;

exports[`renders 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa sc-bwzfXH gWaywk"
    data-testid="button"
  />
</DocumentFragment>
`;
